--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,9 @@
     "default_icon": "icon.png",
     "default_title": "Pomodoro Timer",
     "default_popup": "popup/popup.html"
+  },
+  "permissions": ["storage", "alarms", "notifications"], 
+  "background": {
+    "service_worker": "background.js"
   }
 }
